Fix moon visibility issue, add description to about-me section.

--- a/css/style.css
+++ b/css/style.css
@@ -680,9 +680,9 @@ body {
     letter-spacing: .13rem;
     margin-bottom: -1.5rem;
     /* font-size: 5rem; */
-    font-size: 6vw;
+    font-size: 5.2rem;
     font-weight: 500;
-    text-align: end;
+    /* text-align: end; */
     text-shadow: 0 0 10px #00000082;
     transform: translateX(-100%);
     animation-delay: .5s;
@@ -793,17 +793,37 @@ letter-spacing: .1rem;
     animation-delay: .9s;
 }
 
+.title__description-box {
+    margin-left: .3rem;
+    letter-spacing: .1rem;
+}
+
+.title__description-span {
+    display: block;
+    width: 100%;
+    margin-bottom: .5rem;
+    transform: translateX(-100%);
+    
+}
+.title__description-span-1 {
+    animation-delay: .3s;
+}
+.title__description-span-2 {
+    margin-bottom: 1.3rem;
+    animation-delay: .4s;
+}
+
 
 
 .title__button-container {
     transform: translateX(-120%);
-    animation-delay: .7s;
+    animation-delay: .4s;
     overflow: hidden;
 }
 
 .title__button {
     margin-top: 5px;
-    margin-left: 5%;
+    /* margin-left: 5%; */
     padding: 8px 12px;
     color: white;
     background-color: var(--mainTextColor);
@@ -1144,6 +1164,11 @@ letter-spacing: .1rem;
     margin-top: 8rem;
     background-image: linear-gradient(101deg, #072142, #8c2b7a 52%, #ff4d5a);
     color: white; 
+}
+
+.footer__mail {
+    text-decoration: none;
+    color: white;
 }
 
 
